--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -500,10 +500,16 @@
 }
 
 @article{palacios2004weak,
-  title={Weak Bruhat order on the set of faces of the permutahedra},
-  author={Palacios, Patricia and Ronco, Maria},
-  journal={arXiv preprint math/0404352},
-  year={2004}
+  title = {Weak {{Bruhat}} Order on the Set of Faces of the Permutohedron and the Associahedron},
+  author = {Palacios, Patricia and Ronco, Mar{\'i}a O.},
+  year = {2006},
+  month = may,
+  journal = {Journal of Algebra},
+  volume = {299},
+  number = {2},
+  pages = {648--678},
+  issn = {0021-8693},
+  doi = {10.1016/j.jalgebra.2005.09.042},
 }
 
 @article{dermenjian2018facial,
