--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -188,8 +188,6 @@
 \newcommand{\leftshiftk}[2]{\overleftarrow{\vphantom{1}{#1}}^{#2}}
 %Subdiv cube defs
 \newcommand{\divcube}[1]{\Box_{#1}}
-\newcommand{\subdivcubeofe}{C_e}
-\newcommand{\subdivcubeofouter}{C}
 \newcommand{\hour}{\raisebox{0.065cm}{\rotatebox[origin=c]{90}{$\bowtie$}}_v}
 \newcommand{\maxsubdivpairsv}{M_v}
 
@@ -3406,18 +3404,16 @@ This proves that $R_{M'_{j}}$ is block-admissible, completing the inductive proo
 
 Our next goal is to prove the equivalence between the $m$-shift and geometric $\SU$ diagonals (\cref{prop:iso-shift-IJ-diagonals}).
 As a tool for this proof, we now study \emph{inversions}, or crossings in the partition trees of the geometric $\SU$ diagonal.
-In addition, we shall see later (\cref{sec:Shift-lattice}) that these inversions define a lattice structure on the set of facets.
 
 \begin{definition}
 Let $\sigma$ be an ordered partition.
 \begin{itemize}
-    \item The \defn{strict inversions} of an ordered partition are $I_{<}(\sigma):= \{(i,j): i<j \land \sigma^{-1}(j)<\sigma^{-1}(i) \}$.
-    \item The \defn{weak inversions} of an ordered partition are $I_{\leq}(\sigma):= \{(i,j): i<j \land \sigma^{-1}(j)\leq \sigma^{-1}(i) \}$.
+    \item The \defn{inversions} of an ordered partition are $I(\sigma):= \{(i,j): i<j \land \sigma^{-1}(j)<\sigma^{-1}(i) \}$.
+    \item The \defn{anti-inversions} of an ordered partition are $J(\sigma):= \{(i,j): i<j \land \sigma^{-1}(i)< \sigma^{-1}(j) \}$.
 \end{itemize}
-We then define the \defn{inversions of an ordered partition pair} $I((\sigma,\tau)):=I_{<}(\tau)\ssm I_{\leq}(\sigma)$. 
+We then define the \defn{inversions of an ordered partition pair} $I((\sigma,\tau)):=I(\tau)\cap J(\sigma)$. 
 \end{definition}
-In words, the inversions of an ordered partition pair are those $i<j$ pairs in which $j$ comes in an earlier block than $i$ in $\tau$, and $i$ comes in an earlier block than $j$ in $\sigma$.
-We note that, the strict and weak inversions of a permutation both correspond to the classical definition of inversions of a permutation.
+In words, the inversions of an ordered partition pair are those $i<j$ pairs in which $j$ comes in an earlier block than $i$ in $\tau$, and $i$ comes in an earlier block than $j$ in $\sigma$. 
 
 \begin{proposition}
 \label{p:crossings}
@@ -3426,21 +3422,15 @@ Moreover, under this bijection, strong complementary pairs correspond to facets 
 \end{proposition}
 
 \begin{proof}
-For the first part of the statement, the only way for such a crossing to be produced, is for $(i,j) \in I((\sigma,\tau))$, or for $j$ to appear before $i$ in $\sigma$ and $i$ before $j$ in $\tau$.
+For the first part of the statement,
+we note that crossings are clearly produced by both $I(\tau)\cap J(\sigma)$ and $I(\sigma)\cap J(\tau)$ (i.e. in the second case $j$ appears before $i$ in $\sigma$ and $i$ before $j$ in $\tau$).
 However, the later cannot occur in a facet of the geometric $\SUD$; this follows immediately from the $(I,J)$-conditions for $\card{I} = \card{J} = 1$. 
 The second part of the statement follows from the fact that facets of the diagonal $\SUD$ with no crossings are in bijection with permutations.
 By definition (\cref{def:strong-complementary-pairs}), from a partition one obtains a $\SCP$, which is in the geometric $\SUD$ (\cref{lem:SCP-path-desc}). 
 In the other way around, given a $\SCP$, one can read-off the partition in the associated tree, which has no crossings, by a vertical down-slice of edges (\cref{ex:strong-complementary}).
 \end{proof}
 
-\begin{example}
-For $(\sigma,\tau) = 13|24|57|6 \times 3|17|456|2$, the right ordered $(2,n)$-tree from \cref{ex:1-shift example},
-\begin{itemize}
-\item $\sigma$ has inversions $I_{\leq}(\sigma) = \{(1,3),(2,3),(2,4),(5,6),(5,7),(6,7)\}$, and
-\item $\tau$ has inversions $I_{<}(\tau) = \{(1,3), (2,3), (2,4), (2,5), (2,6), (2,7), (4,7), (5,7), (6,7)\}$.
-\end{itemize}
-Consequently, $(\sigma,\tau)$ has inversions $I = I_{<}(\tau) \ssm I_{\leq}(\sigma) = \{(2,5), (2,6), (2,7), (4,7)\}$, and these are precisely the crossings of the ordered $(2,n)$-tree.
-\end{example}
+See \cref{ex: Inversion and lattice counter example} for an illustration of this bijection.
 
 \begin{definition}
 We say that an edge crossing is an \defn{adjacent crossing} if the two crossing elements are in adjacent blocks of the partition tree (\ie they in blocks of the form $\sigma_i|\sigma_{i+1}$ or $\tau_i|\tau_{i+1}$).
@@ -3470,21 +3460,13 @@ Recall from \cref{rem:inverses} that left and right path-admissible $m$-shifts a
 \begin{proposition} 
 \label{lem:IJ-closed-under-shifts}
 Let $(\sigma,\tau)$ be a facet of the geometric $\SU$ diagonal $\SUD$.
-Then,
-\begin{enumerate}
-\item any pair of ordered partitions obtained by applying a path-admissible $m$-shift to $(\sigma,\tau)$ is also in the geometric $\SU$ diagonal,
-\item applying a path-admissible $m$-shift defining the $m$-shift $\SU$ diagonal strictly increases the number of inversions of $(\sigma,\tau)$.
-Dually, applying inverse $m$-shifts strictly decreases the number of inversions.
-\end{enumerate}
+Then, any pair of ordered partitions obtained by applying a path-admissible $m$-shift to $(\sigma,\tau)$ is also in the geometric $\SU$ diagonal.
 \end{proposition}
 
 \begin{proof}
-We consider a right path-admissible shift $R_\rho$ for the primary statement, the left shift and dual result proceeds similarly. 
+We consider a right path-admissible shift $R_\rho$, the left shift and dual result proceeds similarly. 
 Combining \cref{cor:SU-1-shift-preserves-max} and \cref{prop:iso-1-to-m-shift}, we have that the maxima of paths between consecutive vertices in $(R_{\rho}(\sigma),\tau)$ are the same as the ones in $(\sigma,\tau)$, and are moreover traversed in the same direction.
-Thus, all maxima of paths in $(R_{\rho}(\sigma),\tau)$ are traversed from right to left, and hence by \cref{thm:facet-ordering}, we have that $(R_{\rho}(\sigma),\tau)$ is in the geometric $\SU$ diagonal, which proves Point (1).
-For Point (2), the $(I,J)$ conditions for $\card{I} = \card{J} = 1$ imply that $\rho$ must appear before $\min \sigma_i$ in $\tau$ (\cref{thm:minimal}).
-Therefore, the $m$-shift creates a new crossing between these two edges.
-\Guillaume{Why is there no deletion of inversions?}
+Thus, all maxima of paths in $(R_{\rho}(\sigma),\tau)$ are traversed from right to left, and hence by \cref{thm:facet-ordering}, we have that $(R_{\rho}(\sigma),\tau)$ is in the geometric $\SU$ diagonal.
 \end{proof}
 
 \begin{lemma}
@@ -3493,9 +3475,9 @@ Any facet $(\sigma,\tau)$ of the geometric $\SU$ diagonal $\SUD$ is mapped to a 
 \end{lemma}
 
 \begin{proof}
-Since the number of inversions of a pair of ordered partitions $(\sigma,\tau)$ in the geometric $\SU$ diagonal is finite, we will only be able to apply a finite chain of inverse shift operators to it before no further operations are available. 
-It thus remains to show that for any pair $(\sigma,\tau)$ which is not a strong complementary one, performing a path-admissible inverse $m$-shift is possible. 
-We consider the following cases, illustrated in \cref{ex:proof-inverse-shift}.
+We show that any facet $(\sigma,\tau)$ which has a crossing, and is hence not a $\SCP$, admits an inverse shift operation. 
+This shows that a finite number of inverse shift operations converts any facet to a $\SCP$ (if $\sigma$ is an ordered partition of $n$ with $k$ blocks, then clearly less than $n^k$ inverse shifts are possible).
+We consider the following partition of the set of facets with crossings, illustrated by example in \cref{ex:proof-inverse-shift}.
 \begin{enumerate}
 	\item All adjacent blocks are connected by paths of length $2$.
 	\item There exist adjacent blocks which are connected by a path of length $2k$ for $k>1$.
@@ -3508,7 +3490,7 @@ We consider the following cases, illustrated in \cref{ex:proof-inverse-shift}.
 		\end{enumerate}
 	\end{enumerate}
 \end{enumerate}
-In Case $(1)$, if the facet $(\sigma,\tau)$ is not a $\SCP$ then it must have a crossing, and hence an adjacent crossing by \cref{lem:adjacent-crossing}. 
+In Case $(1)$, as $(\sigma,\tau)$ has a crossing, it has an adjacent crossing by \cref{lem:adjacent-crossing}. 
 This adjacent crossing is of the following form (we illustrate the case where the crossing happens on the left, the case when it happens on the right is similar): 
 \begin{center}
 \begin{tikzpicture}[scale=.6]  
@@ -4081,134 +4063,20 @@ where we have aligned each element, of each diagonal, vertically with its dual e
 
 %%%%%%%%%%%%%%%
 
-\subsection{The facial weak order}
-\label{sec:facial-weak-order}
-
-The facial weak order is a lattice strucure on the faces of the permutahedra, which generalizes the weak order on permutations to all ordered partitions.
-It was introduced in \cite{palacios2004weak}.
-In this section we recall a definition of the facial weak order, and characterize facets of both the $\LA$ and $\SU$ diagonal as intervals in this order.
-
-\begin{definition}[Lemma 22 of \cite{palacios2004weak}]
-Let $\sigma = \sigma_1|\cdots|\sigma_k$ denote an ordered partition.
-The facial weak order lattice of the permutahedra is the transitive closure of the following relations,
-\begin{align}
-    \max \sigma_i < \min \sigma_{i+1} &\implies \sigma < \sigma_1|\cdots|\sigma_i \sqcup \sigma_{i+1}|\cdots|\sigma_k  \label{eq:Weak Facial 1}\\
-    \min \sigma_i > \max \sigma_{i+1} &\implies \sigma > \sigma_1|\cdots|\sigma_i \sqcup \sigma_{i+1}|\cdots|\sigma_k \label{eq:Weak Facial 2}
-\end{align}
-\end{definition}
-
-Recall from \cref{subsec:inversions} the poset structure on the faces of the permutahedra given by inclusion sets of weak inversions. 
-
-\begin{definition}
-We define a partial order on the set of ordered partitions through weak inversions.
-We say $\sigma<\tau$ if $I_{\leq}(\sigma)<I_{\leq}(\tau)$. 
-\end{definition}
-
-\begin{proposition}
-The facial weak order is a refinement\Kurt{check correct term} of the inversion order.
-\end{proposition}
-\begin{proof}
-This is clear as the inversion table used by the facial weak order (Example 3.6 of \cite{dermenjian2018facial}) is a refinement of our notion of an inversion.
-In particular, their notion of an inversion distinguishes when two elements are in the same block.
-\end{proof}
-
-
-\begin{example}
-We illustrate the facial weak order for $\Perm[3]$ as a refinement of the weak inversion order, grouping elements with the same weak inversion sets.
-\begin{center}
-\begin{tikzpicture}
-\node (1) at (-1.5, -1) {$3|12$};
-\node (2) at (-2.5, -2) {$3|1|2$};
-\node (3) at (-2.5, -3) {$13|2$};
-\node (4) at (-2.5, -4) {$1|3|2$};
-\node (5) at (-1.5, -5) {$1|23$};
-%
-\node (6) at (1.5, -1) {$23|1$};
-\node (7) at (2.5, -2) {$2|3|1$};
-\node (8) at (2.5, -3) {$2|13$};
-\node (9) at (2.5, -4) {$2|1|3$};
-\node (10) at (1.5, -5) {$12|3$};
-%
-\node (11) at (0, 0) {$3|2|1$};
-\node (12) at (0, -3) {$123$};
-\node (13) at (0, -6) {$1|2|3$};
-%
-\draw[thick] (1) -- (2); 
-\draw[thick] (2) -- (3); 
-\draw[thick] (3) -- (4); 
-\draw[thick] (4) -- (5);
-%
-\draw[thick] (6) -- (7); 
-\draw[thick] (7) -- (8); 
-\draw[thick] (8) -- (9); 
-\draw[thick] (9) -- (10);
-%
-\draw[thick] (1) -- (11);
-\draw[thick] (6) -- (11);
-%
-\draw[thick] (1) -- (12);
-\draw[thick] (5) -- (12);
-\draw[thick] (6) -- (12);
-\draw[thick] (10) -- (12);
-%
-\draw[thick] (5) -- (13);
-\draw[thick] (10) -- (13);
-%
-\hedge[green, very thick]{1,11,6,12}{0.45cm}
-\hedge[green, very thick]{2,3}{0.45cm}
-\hedge[green, very thick]{4,5}{0.45cm}
-\hedge[green, very thick]{7,8}{0.45cm}
-\hedge[green, very thick]{9,10}{0.45cm}
-\end{tikzpicture}
-\end{center}
-\end{example}
-
-\begin{lemma}\label{lem:SCPs are intervals of facial weak order}
-Let $(\sigma,\tau)$ be the SCP corresponding to the permutation $v$, then $\sigma<v<\tau$ under the facial weak order.
-\end{lemma}
-\begin{proof}
-Firstly $\sigma<v$, as repeated applications of \cref{eq:Weak Facial 2} shows that a block of elements is smaller than those same elements arranged in decreasing order.
-Similarly $v<\tau$, as repeated applications of \cref{eq:Weak Facial 1} shows that a sequence of increasing elements is smaller than those same elements in a block. 
-To ground this in \cref{ex:shift translation by theta}, $13|247|5|6 < 3|1|7|4|2|5|6 <3|17|4|256$.
-\end{proof}
-
-More generally,
-\begin{proposition}
-Facets $(\sigma,\tau)$ of the $\LA$ and $\SU$ diagonal correspond to intervals $[\sigma,\tau]$ of the facial weak order.
-\end{proposition}
-\begin{proof}\
-We proceed by induction.
-Let $(\sigma,\tau) \in \SUD$ be a facet generated by shifts of the SCP corresponding to the permutation $v$, and suppose that $\sigma < v < \tau$.
-Given \cref{lem:SCPs are intervals of facial weak order}, we have a base case for induction.
-We then prove that if $R_\rho \tau$ is an admissible right shift of $\rho$, then $\sigma < v < R_\rho \tau$.
-As the analogous results for left shifts and $\LA$ shifts proceed similarly, this yields the result.
-
-Let $v'$ be the permutation resulting from writing out the blocks of $R_\rho \tau$ in increasing order, then $v<v'<R_\rho \tau$.
-The second equality follows as in the prior proof.
-To prove the first equality, we show that $I_<(v)\subset I_<(v')$ (as the the facial weak order on permutations is the weak order).
-This follows as \Kurt{Clear, but think of something concise.}
-\end{proof}
-
-So given this result and \cref{thm:patterns} (which shows that vertices are intervals in the weak order, and hence the facial weak order), it is suspected that all faces of the $\LA$ and $\SU$ diagonals are intervals of the facial weak order. 
-\Kurt{Do we care enough to look? Any quick ideas?}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 \subsection{Shift lattice structure}
 \label{sec:Shift-lattice}
 
 In this section, we show that the $1$-shifts of the operadic diagonals~$\LAD$ and $\SUD$, define the covering relations of a lattice structure on the set of facets.
-More precisely, we show that each $\SCP$ is the minimal element of a lattice isomorphic to a product of chains, where the partial order is given by shifts, or equivalently inversions.
+More precisely, we show that each $\SCP$ is the minimal element of a lattice isomorphic to a product of chains, where the partial order is given by shifts.
 Given the bijection between $\SCP$s and permutations, and our prior enumeration of the facets of the diagonal, this produces two new statistics on permutations.
 In addition, later in \cref{sec:Cubical}, we will use the lattice structure to relate the cubical and shift definitions of the $\SUD$ diagonal.
 
 \begin{definition}
 \label{def:shift-lattice}
-For each permutation $v$ of $[n]$ with associated $\SCP$ $(\sigma,\tau)$, the \defn{shift lattice} $\hour^\LA$ (\resp $\hour^\SU$) is the set of facets of the $\LA$ (\resp $\SU$) diagonal partially ordered by the inclusion of their inversions sets. 
+For each permutation $v$ of $[n]$, the \defn{shift lattice} $\hour^\LA$ (\resp $\hour^\SU$) is the set of all admissible $\LA$ $(\resp \SU)$ shifts of the associated $\SCP$ $(\sigma,\tau)$, partially ordered by shifts.
+That is to say, $(\sigma_1,\tau_1)\leq (\sigma_2,\tau_2)$ if there exists a sequence of path-admissible $\LA$ (\resp $\SU$) shifts turning $(\sigma_1,\tau_1)$ into $(\sigma_2,\tau_2)$.
 \end{definition}
 
-Cover relations are given by singleton $1$-shifts, see \cref{subsec:inversions}.
-As such, an alternative definition is $(\sigma,\tau)\leq (\sigma',\tau')$ if there exists a sequence of path-admissible $\LA$ (\resp $\SU$) shifts turning $(\sigma,\tau)$ into $(\sigma',\tau')$.
 We now aim at proving in \cref{prop:shift lattice}, that these posets are indeed lattices.
 
 \begin{lemma}
@@ -4269,7 +4137,7 @@ We denote by $L_\rho^m$ (\resp $R_\rho^m$) a left (right) $m$-shift of $\rho$ fo
 By the commutativity of $m$-shift operators (\cref{lem:m-shifts commute}), and the existence of unique heights for each element (\cref{prop:maximal m-shift formulae}), every element of $\hour^\LA$ admits a unique shift description $(L^{\ell_n}_{n} \dots L^{\ell_1}_{1}(\sigma),
 R^{r_n}_{n}\cdots R^{r_{1}}_{1}(\tau))$, where $0\leq \ell_\rho\leq \ell_v(\rho)$ and $0\leq r_\rho\leq r_v(\rho)$.
 Thus, we identify it with the pair of tuples $(\ell_1,\ldots,\ell_n)\times (r_1,\ldots,r_n)$.
-As shifts strictly increase the number of inversions, and inverse shifts strictly decrease them (\cref{lem:IJ-closed-under-shifts}), this identification is an isomorphism of lattices.
+This is clearly an isomorphism of lattices.
 \end{proof}
 
 Note that the maximal element of $\hour$ (for either diagonal) is given by shifting each element of $(\sigma,\tau)$ by its maximal shift.
@@ -4283,16 +4151,10 @@ For instance, in the case of meets,
 The Hasse diagram of the lattice corresponds to singleton $1$-shifts, and we can step backwards in the diagram by applying their inverse (\cref{rem:inverses}).
 For a clear example of the Hasse diagram, we direct the reader back to \cref{ex:shift translation by theta}.
 
-Given that in \cite{dermenjian2018facial} it was shown that the facial weak order is a lattice, it is natural to wonder if the shift lattices arise as sub-lattices of the facial weak order.
-
-\begin{proposition}
-The shift lattices are not sub-lattices of the product of the facial weak order with itself.
-\end{proposition}
-
-\begin{proof}
-We provide a counter example for the $\LA$ diagonal that illustrates the shift lattice is not compatible with the facial weak order.
-Similar counter examples can be produced for the $\SU$ diagonal.
-Consider the sequence of path-admissible $\LA$ right $1$-shifts
+It is natural to wonder if the lattice structure admits an alternate characterisation in terms of inversion sets.
+This is not the case, as the following example illustrates
+\begin{example}\label{ex: Inversion and lattice counter example}
+\Kurt{TODO: Lattice and illustration of inversion sets.}
 \begin{center}
 \begin{tikzpicture}[scale=.6]  
 \node[anchor=east] (1) at (-1.5, -1) {$1$};
@@ -4336,9 +4198,10 @@ Consider the sequence of path-admissible $\LA$ right $1$-shifts
 \draw[thick] (3.east) -- (5.west);
 \end{tikzpicture} \ .
 \end{center}
-The final right shift does not respect the facial weak order as $14|23$ and $4|123$ are incomparable.
-\end{proof}
-We note that as the weak inversion order respects shifts (e.g. $14|23 < 4|123$), it is the additional information in the refinement of the facial weak order, over the weak inversion order (\cref{sec:facial-weak-order}), that is breaking the lattice structure.
+
+This example illustrates that the shift lattices is not directly related to inclusions of inversions sets.
+For instance, it can be shown that the right shift of $1$ from $14|23$ to $4|123$, does not respect the facial weak order (discussed in \cref{sec:facial-weak-order}), as these ordered partitions are incomparable.
+\end{example}
 
 \begin{remark}
 As a consequence of \cref{prop:shift lattice}, the facets of the operadic diagonals are disjoint unions of lattices.
@@ -4772,6 +4635,98 @@ where the vertical arrows are the bijection between SCPs and permutations (\cref
 
 
 %%%%%%%%%%%%%%%
+
+
+
+\subsection{The facial weak order}
+\label{sec:facial-weak-order}
+
+The facial weak order is a lattice structure on the faces of the permutahedra, which generalizes the weak order on permutations to all ordered partitions.
+It was introduced in \cite{palacios2004weak}, and shown to be a lattice in \cite{dermenjian2018facial}.
+In this section we recall a definition of the facial weak order, and characterize facets of both the $\LA$ and $\SU$ diagonal as intervals in this order.
+
+\begin{definition}[Lemma 22 of \cite{palacios2004weak}]
+Let $\sigma = \sigma_1|\cdots|\sigma_k$ denote an ordered partition.
+The facial weak order lattice of the permutahedra is the transitive closure of the following relations,
+\begin{align}
+    \max \sigma_i < \min \sigma_{i+1} &\implies \sigma < \sigma_1|\cdots|\sigma_i \sqcup \sigma_{i+1}|\cdots|\sigma_k  \label{eq:facial weak 1}\\
+    \min \sigma_i > \max \sigma_{i+1} &\implies \sigma > \sigma_1|\cdots|\sigma_i \sqcup \sigma_{i+1}|\cdots|\sigma_k \label{eq:facial weak 2}
+\end{align}
+\end{definition}
+We stress that the weak facial order recovers the weak order on permutations as should be apparent in the following example.
+
+\begin{example}
+We illustrate the Hasse diagram of the facial weak order for $\Perm[3]$.
+\begin{center}
+\begin{tikzpicture}
+\node (1) at (-1.5, -1) {$3|12$};
+\node (2) at (-2.5, -2) {$3|1|2$};
+\node (3) at (-2.5, -3) {$13|2$};
+\node (4) at (-2.5, -4) {$1|3|2$};
+\node (5) at (-1.5, -5) {$1|23$};
+%
+\node (6) at (1.5, -1) {$23|1$};
+\node (7) at (2.5, -2) {$2|3|1$};
+\node (8) at (2.5, -3) {$2|13$};
+\node (9) at (2.5, -4) {$2|1|3$};
+\node (10) at (1.5, -5) {$12|3$};
+%
+\node (11) at (0, 0) {$3|2|1$};
+\node (12) at (0, -3) {$123$};
+\node (13) at (0, -6) {$1|2|3$};
+%
+\draw[thick] (1) -- (2); 
+\draw[thick] (2) -- (3); 
+\draw[thick] (3) -- (4); 
+\draw[thick] (4) -- (5);
+%
+\draw[thick] (6) -- (7); 
+\draw[thick] (7) -- (8); 
+\draw[thick] (8) -- (9); 
+\draw[thick] (9) -- (10);
+%
+\draw[thick] (1) -- (11);
+\draw[thick] (6) -- (11);
+%
+\draw[thick] (1) -- (12);
+\draw[thick] (5) -- (12);
+\draw[thick] (6) -- (12);
+\draw[thick] (10) -- (12);
+%
+\draw[thick] (5) -- (13);
+\draw[thick] (10) -- (13);
+\end{tikzpicture}
+\end{center}
+\end{example}
+
+\begin{proposition}
+Let $(\sigma,\tau)\in \hour^\LA$ or $(\sigma,\tau)\in \hour^\SU$,
+then $\sigma \leq v \leq \tau$ under the facial weak order.
+\end{proposition}
+\begin{proof}
+Let $\sigma$ be a face of the permutahedra, and let $\sigma^*$ (\resp $\sigma_*)$ denote the unique maximal (minimal) vertex of a face of the permutahedra, under the weak order.
+This vertex is constructed by writing out each block of $\sigma$ in decreasing (increasing) order.
+It is clear that under the facial weak order
+$\sigma<\sigma^*$, as repeated applications of \cref{eq:facial weak 2} shows that a block of elements is smaller than those same elements arranged in decreasing order.
+Similarly $\sigma_*<\sigma$, as repeated applications of \cref{eq:facial weak 1} shows that a sequence of increasing elements is smaller than those same elements in a block. 
+Then it is clear from the construction of $\hour^{\LA}$ (and $\hour^{\SU}$) (in \cref{sec:Cubical}) that for $(\sigma,\tau)\in \hour^{\LA}$ (or $\in \hour^{\SU}$), $\sigma \leq \sigma^* \leq v \leq \tau_* \leq \tau$, as every vertex in the left (right) maximal subdivision cube is smaller (greater) than $v$ under the weak order.
+\end{proof}
+
+\begin{example}
+In the context of \cref{ex:subdivision cubes}, $1|234\times 4|3|12 \in \hour$, for $v=4|3|1|2$, and 
+\begin{align*}
+    1|234 \leq  1|4|3|2 \leq  4|3|1|2 \leq  4|3|1|2 \leq  4|3|12 \ .
+\end{align*}
+\end{example}
+
+\begin{corollary}
+Facets of the $\LA$ and $\SU$ diagonal correspond to intervals of the facial weak order.
+\end{corollary}
+
+So given this result and \cref{thm:patterns} (which shows that vertices are intervals in the weak order, and hence the facial weak order), it is suspected that all faces of the $\LA$ and $\SU$ diagonals are intervals of the facial weak order. 
+\Kurt{Do we care enough to look? Any quick ideas?}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Matrix description}
 \label{subsec:matrix}
